<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/component_margin"
        android:paddingBottom="@dimen/component_last_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/update_profile"
            android:textColor="@color/primary"
            android:textSize="@dimen/app_title_size_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/layout_header"
        android:layout_above="@+id/layout_footer"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_user"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/form_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_email"
                        style="@style/EditorStyle"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/enter_email"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_firstname"
                        style="@style/EditorStyle"
                        android:inputType="textPersonName"
                        android:hint="@string/enter_firstname"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_lastname"
                        style="@style/EditorStyle"
                        android:inputType="textPersonName"
                        android:hint="@string/enter_lastname"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_address"
                        style="@style/EditorStyle"
                        android:inputType="text"
                        android:hint="@string/enter_address"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_phone"
                        style="@style/EditorStyle"
                        android:inputType="phone"
                        android:hint="@string/enter_phone"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_old_password"
                        style="@style/EditorStyle"
                        android:inputType="textPassword"
                        android:hint="@string/enter_old_password"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_password"
                        style="@style/EditorStyle"
                        android:inputType="textPassword"
                        android:hint="@string/enter_new_password"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                    <EditText
                        android:id="@+id/txt_confirm_password"
                        style="@style/EditorStyle"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password_2"
                        android:layout_marginBottom="@dimen/component_last_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editor_height" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin"
            android:background="@drawable/button_style"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>