<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:layout_height="0dip">

        <TextView
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/primary"
            android:textSize="@dimen/app_title_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/component_margin"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_email"
                style="@style/EditorStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:layout_marginBottom="@dimen/component_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/EditorStyle"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:layout_marginBottom="@dimen/component_last_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight=".5"
                android:background="@drawable/button_style"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_weight=".5"
                android:background="@drawable/button_style"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>