<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/form_padding"
        android:paddingTop="@dimen/form_padding">

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/form_padding"
            android:paddingRight="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/overall_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txt_comments"
                style="@style/EditorStyle_Margin"
                android:maxLines="1"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/multiple_editor_height" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/form_padding"
            android:paddingRight="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/house_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.idragonit.inspection.components.MaskedEditText
                android:id="@+id/txt_pressure"
                style="@style/EditorStyle_Margin"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.idragonit.inspection.components.MaskedEditText
                android:id="@+id/txt_flow"
                style="@style/EditorStyle_Margin"
                android:maxLines="1"
                android:text="0000.0"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/component_margin"
            android:paddingLeft="@dimen/form_padding"
            android:paddingRight="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/duct_leakage_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_result_duct_leakage"
                style="@style/TextViewStyle_Margin"
                android:gravity="center"
                android:textSize="@dimen/view_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height"/>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding"
                android:layout_marginBottom="@dimen/component_margin_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/qn"
                    android:layout_weight=".6"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_qn"
                    style="@style/LabelStyle"
                    android:gravity="center"
                    android:textSize="@dimen/view_text_size"
                    android:layout_weight=".4"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding"
                android:layout_marginBottom="@dimen/component_margin_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/qn_out"
                    android:layout_weight=".6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_qn_out"
                    style="@style/LabelStyle"
                    android:gravity="center"
                    android:textSize="@dimen/view_text_size"
                    android:layout_weight=".4"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/component_margin"
            android:paddingLeft="@dimen/form_padding"
            android:paddingRight="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/envelop_leakage_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_result_envelop_leakage"
                style="@style/TextViewStyle_Margin"
                android:gravity="center"
                android:textSize="@dimen/view_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height"/>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding"
                android:layout_marginBottom="@dimen/component_margin_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/ach50"
                    android:layout_weight=".6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_ach50"
                    style="@style/LabelStyle"
                    android:gravity="center"
                    android:textSize="@dimen/view_text_size"
                    android:layout_weight=".4"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/form_padding"
            android:paddingRight="@dimen/form_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_picture"
                    android:layout_centerVertical="true"
                    android:text="@string/inspector_signature" />

                <ImageView
                    android:id="@+id/btn_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/form_margin"
                    android:background="@drawable/menu_selector"
                    android:padding="2dip" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_signature"
                style="@style/TextViewStyle_Margin"
                android:gravity="center"
                android:textSize="@dimen/view_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editor_height"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>